=item *

The metadata for related media now include preview links. The same goes for
the medadata about a media document when editing a subelement of that media
document. [David]

=item *

The status message when a document is published now reports the site with
which the document is associated, to help distinguish documents from their
aliases in the status message. Reported by Marshall. [David]

=back

=head2 Bug Fixes

=over

=item *

My Workspace now remembers the sort order of assets as well as desks do.
[David]

=item *

Added more code to the C<inst/upgrade/1.8.9/fix_publish_status.pl> upgrade
script to better cover the possible variations in publish status inaccuracies.
[Brad Fox]

=item *

Distribution via any mover other than "File System" now correctly strips off
port numbers from the host name. This is most useful when using FTP, SFTP, or
WebDAV to distribute to a preview server serving content from an alternate
port. Reported by Doug Dawson. [David]

=item *

If run as root, C<make clone> now becomes the PostgreSQL system user before
cloning the database, so that it should work properly where PostgreSQL is
configured to use "ident" authentication. [David]

=item *

The list of desks that appear for a given workflow in the nav iframe are now
properly updated when a new desk is added to the workflow. [Alexey
Dvoychenkov]

=item *

The side navigation no longer shows the "New Alias" links to users that don't
have the proper permissions (CREATE on the start desk). (bug 1203) [Marshall]

=item *

The code of a template no longer disappears when you click "Trail" in the
Template Profile. (bug 1204) [Marshall]

=item *

F<bric_soap> is now more intelligent about parsing IDs from XML elements with
either single or double quotes, and from multiple tags. [Christian Niles and
David]

=item *

Failing to fill in either the "To" or "Bcc" fields of an Email distribution
action no longer throws you back a screen, but stays in the Email action