@@ -52,6 +52,11 @@ The status message when a document is published now reports the site with
 which the document is associated, to help distinguish documents from their
 aliases in the status message. Reported by Marshall. [David]
 
+=item *
+
+Added C<get_site()> to L<Bric::Biz::Asset|Bric::Biz::Asset>, and therefore to
+the story, media, and template classes. Suggested by Marshall. [David]
+
 =back
 
 =head2 Bug Fixes
